--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
+    "fs-extra": "^11.1.1",
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0"
+  },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.5.0",
-    "typescript": "^5.1.6",
+    "@types/ws": "^8.5.5",
+    "cross-env": "^7.0.3",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
-    "prettier": "3.0.1"
+    "prettier": "3.0.1",
+    "typescript": "^5.1.6"
   }
 }
