--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node dist/index"
+    "start": "tsc && node dist/timer && node dist/sendMessage",
+    "start1": "tsc && node dist/timer",
+    "start2": "tsc && node dist/sendMessage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.5.0",
-    "typescript": "^5.1.6",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
-    "prettier": "3.0.1"
+    "prettier": "3.0.1",
+    "typescript": "^5.1.6"
   }
 }
